--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
                         including image classifiers and deepfake detectors. This work was presented at 2025 AmuSec at CIRM in Marseille.
                     </p>
                     <div class="project-links">
-                        <a href="https://github.com/yourusername/project2" target="_blank">GitHub <i class="fab fa-github"></i></a>
-                        <a href="https://medium.com/@yourusername/project2" target="_blank">Article <i class="fab fa-medium"></i></a>
+                        <a href="https://github.com/Ilyes-Azni/image-stats-toolbox" target="_blank">GitHub <i class="fab fa-github"></i></a>
+                        <a href="https://conferences.cirm-math.fr/programme-amusec-2025.html" target="_blank">Article <i class="fab fa-medium"></i></a>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
                 <div class="project-card">
-                    <h3>Sequance prediction for @HRFlow [WIP]</h3>
+                    <h3>Sequence prediction for @HRFlow [WIP]</h3>
                     <p>Following the challenge data from ENS, I am developping a sequence prediction model enabling the dynamic and intelligent job proposition to any job seeker
                         I'll upload the implementation on github.</p>
                     <div class="project-links">
-                        <a href="https://github.com/yourusername/project3" target="_blank">GitHub <i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Ilyes-Azni" target="_blank">GitHub <i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
